This app is yet to be finished.

--- a/homewk5.html
+++ b/homewk5.html
@@ -27,7 +27,7 @@
   <body>
     <div class="container">
       <h1>The Weather App</h1>
-      <form id="search_form" class="search-form">
+      <form id="search-form" class="search-form">
         <div class="row">
           <div class="col-6">
             <input
@@ -61,11 +61,12 @@
           <div class="col-sm-4">
             <div class="card border-light mb-0 h-85">
               <div class="card-header">Local Weather</div>
-              <h2 class="card-status" id="city">Germany</h2>
-
+              <h2 class="card-status" id="city">Paris</h2>
+              <!-- <h6 class="changes" id="changes"></h6> -->
+              <br />
               <ul>
-                <li id="changes">Friday 22:00</li>
-                <li>Partly cloudy</li>
+                <li id="changes"></li>
+                <li id="description">Partly Cloudy</li>
               </ul>
 
               <div class="row">
