--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
-    <link rel="stylesheet" href="styles5.css" />
+    <link rel="stylesheet" href="styles6.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,10 +24,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
+
   <body>
     <div class="container">
       <h1>The Weather App</h1>
-      <form id="search-form" class="search-form">
+      <br />
+      <form id="search_form" class="search-form">
         <div class="row">
           <div class="col-6">
             <input
@@ -49,38 +51,31 @@
             <input
               type="button"
               value="current"
-              class="current-button"
+              class="btn btn-outline-secondary"
               id="current-button"
             />
           </div>
         </div>
       </form>
       <br />
+
       <div class="forecast">
         <div class="row">
           <div class="col-sm-4">
             <div class="card border-light mb-0 h-85">
               <div class="card-header">Local Weather</div>
-              <h2 class="card-status" id="city">Paris</h2>
-              <!-- <h6 class="changes" id="changes"></h6> -->
+              <h1 class="card-status" id="city"></h1>
+              <h2 id="changes"></h2>
               <br />
-              <ul>
-                <li id="changes"></li>
-                <li id="description">Partly Cloudy</li>
-              </ul>
 
               <div class="row">
-                <div class="col-6">
-                  <div class="clearfix">
-                    <div class="float-left">
-                      <span class="temperature" id="temp">19</span>
-                      <span class="units">
-                        <a href="#" id="cel-link">°C</a> |
-                        <a href="#" id="fah-link">°F</a>
-                      </span>
-                    </div>
-                  </div>
+                <div class="col-6 temp">
+                  <span class="row description" id="weather-desc"></span>
+                  <br />
+                  <span id="temp"></span>
+                  <span class="units">ºC</span>
                 </div>
+
                 <div class="col-6">
                   <ul>
                     <li>Humidity: <span id="humidity">71%</span></li>
@@ -180,12 +175,14 @@
 
         <div class="code">
           <p>
-            Coded by
-            <a href="https://www.linkedin.com/in/lynen/">Lyne Naluwaga 👩🏼‍💻</a>
+            <a href="https://github.com/Lynesn/shecodeswk6hw"
+              >Open-source code</a
+            >
+            by Lyne Naluwaga 👩🏼‍💻
           </p>
         </div>
       </div>
     </div>
-    <script src="homewk5.js"></script>
+    <script src="homewk6.js"></script>
   </body>
 </html>
